--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@
    			<h1>Let me introduce myself.</h1>
 
    			<div class="intro-info">
-
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
-
-   				<p class="lead">
+				<img src="images/portfolio/profile_immg.JPG" height="1042" width="1024"/>
+				<p class="lead">
 					I currently work as an iOS App Engineer with a wide breadth of experience in the tech space, building and delivering quality software and solutions following best practices, incorporating the best tools, resources and features also with superior communication skills.
 				</p >
 				<p class="lead">As a Mobile App Developer, I pride myself in not just being able to take on challenges or converting complex user requirements into beautiful great products, but my ability to work effectively within a team.</p>
@@ -201,8 +199,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+<!--   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>-->
+<!--   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>-->
    		</div>   		
    	</div>
 
@@ -243,8 +241,8 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>iOS Engineer</h3>
-	   					<p>Nov 2019 - Present</p>
+	   					<h3>Senior iOS Engineer</h3>
+	   					<p>Oct 2020 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -261,7 +259,29 @@
 						</div>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+					<!-- /timeline-block -->
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>iOS Developer</h3>
+							<p>Nov 2019 - Oct 2020</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Rubies Bank</h4>
+							<!--	   					<p>sse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>-->
+							<div>Developed new features for proprietary iOS applications used on iPhones and iPads;</div>
+							<div>Maintained long and short-range deliverables with product management team according to product roadmaps.</div>
+							<div>Reviewed design specs and engineering docs and provided feedback.</div>
+							<div>Wrote unit tests for mobile code and debugged critical application issues such as crashes, memory leaks, and concurrency problems.</div>
+						</div>
+
+
+					</div> <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
@@ -271,7 +291,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Android Developer</h3>
-	   					<p>Feb 2019 - Nov 2019</p>
+	   					<p>Nov 2018 - Oct 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -409,13 +429,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/roberto.jpeg" alt="Shutterbug">
+	               	<img src="images/rubies.jpeg" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Roberto</h3>
+	                     		<h3 class="folio-title">Rubies</h3>
 		     					    	<span class="folio-types">
-		     					       	  An Banking and Financial Agency App
+		     					       	  A 21st Century Digital Banking App
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -518,7 +538,7 @@
 
 				     	<div class="media">
 
-							<img src="images/portfolio/roberto_dash.jpeg" height="2208" width="1242"/>
+							<img src="images/rubies_dash2.jpeg" height="2208" width="1242"/>
 						</div>
 
 					   <div class="description-box">
@@ -533,10 +553,10 @@
 
 					   </div>
 
-			         <div class="link-box">
-			            <a href="http://www.behance.net">URL</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+					   <div class="link-box">
+						   <a href="https://apps.apple.com/us/app/rubies/id1458430556">URL</a>
+						   <a href="#" class="popup-modal-dismiss">Close</a>
+					   </div>
 
 				   </div> <!-- /modal-02 -->
 
